--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <input type="text" name="display">
             </div>
             <div>
-                <input type="button" value="AC">
+                <input type="button" value="AC" class="clear">
                 <input type="button" value="DE">
                  <input type="button" value=".">
                   <input type="button"value="/">
